MODON MRE BPDEV/force-app/main/default/objects/Customer360_Field_Config__mdt/Customer360_Field_Config__mdt.object-meta.xml
<CustomObject>
    <label>Customer360 Field Config</label>
    <pluralLabel>Customer360 Field Configs</pluralLabel>
</CustomObject>