MODON MRE BPDEV/force-app/main/default/objects/Customer360_Field_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the field should be shown in the UI</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>