MODON MRE BPDEV/force-app/main/default/objects/Customer360_Field_Config__mdt/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <description>Identifies which section the field belongs to (e.g., Personal Information, Purchase Information, Social, Internal Information, Case History, Default Information, Communications)</description>
    <label>Component Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>