MODON MRE BPDEV/force-app/main/default/objects/Customer360_Field_Config__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>The display name of the field (e.g., Full Name, Age, Gender)</description>
    <label>Field Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>