MODON MRE BPDEV/force-app/main/default/objects/Customer360_Field_Config__mdt/fields/Field_Name_In_Object__c.field-meta.xml
<CustomField>
    <fullName>Field_Name_In_Object__c</fullName>
    <description>This field will store the actual API name of the field in Account or Opportunity or Sales order or Contact or Case.</description>
    <label>FieldNameInObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>